[package]
name = "ps-hkey"
version = "0.1.0-21"
edition = "2021"
description = "This crate defines the hashkey format and provides methods for resolving them"
license = "GPL-3.0-or-later"

[dependencies]
futures = "0.3.31"
ps-base64 = "0.1.0-5"
ps-datachunk = "0.1.0-27"
ps-hash = "0.1.0-17"
ps-promise = "0.1.0-9"
ps-util = "0.1.0-3"
rayon = "1.10.0"
thiserror = "2.0.12"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
