[package]
name = "ps-hkey"
version = "0.1.0-33"
edition = "2021"
description = "This crate defines the hashkey format and provides methods for resolving them"
license = "GPL-3.0-or-later"

[dependencies]
arrayvec = "0.7.6"
futures = "0.3.32"
parking_lot = "0.12.5"
ps-base64 = "0.1.0-6"
ps-cypher = "0.1.0-28"
ps-datachunk = "0.1.0-36"
ps-hash = "0.1.0-24"
ps-promise = "0.1.0-14"
ps-util = "0.1.0-6"
rayon = "1.11.0"
thiserror = "2.0.18"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
